cambios agregamos sitios de twitcht

--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
 </head>
 <body>
     <p>
-        Hola estudiantes este es mi sitio web
-        xvideos.com xd 
+        Hola amigos, putos todos 
     </p>
 </body>
 </html>
